fix some more crashes related to bug 196337. r=blake, sr=hewitt.